﻿Subtitle Edit Changelog

3.5.17 (xth September 2020) BETA
* NEW:
   * Add new subtitle format - thx Holmgeir
   * Add new subtitle (Excel) format - thx Jecy
   * Add new subtitle (json) format - thx Maksim
   * Add new subtitle format FCP Xml 1.8 - thx Maria
   * Add shortcuts for Tools menu items Split/Append/Join - thx z3us
   * Add shortcuts for "Merge line with same text/time-code" - thx Mike
   * Add shortcuts "Set end and pause" + "Export to PAC" - thx Milenko
   * Add shortcut for File - Compare
   * Add context menu item for "Set default fixes" in FCE
   * Cmd line convert use header from EBU STL file - thx malashin
   * Add "ocrengine" parameter to cmd line convert
   * Add "Export to FCP+image" in OCR window - thx Marko
   * Add alignment support for .scc files - thx madprogramer 
* IMPROVED:
   * Update Bulgarian translation - thx KalinM
   * Update Hungarian translation - thx Zityi
   * Update Finnish translation - thx Teijo S
   * Update Korean translation - thx domddol
   * Update Polish spell check dictionary - thx borifax
   * Improve support for transport stream in "cmd line convert"
   * Improve support for transport stream in "Batch convert"
   * Improve reading of badly formatted srt files - thx Gordon
   * Show warning when saving DCinema formats in non-utf-8
   * Improve "Import plain text" for small resolutions - thx doquan0
   * Improve end-color-font-tag for EBU 3+ lines
   * Update Finnish spell check to libvoikko 4.3 (2019-11-24)
   * Finnish spell check should now also work on Linux - thx Gitraffe
   * Allow higher (1000) max margin for SSA/ASS thx Looi
   * Change preferred ANSI code page for Turkish(1254)/Hebrew(1255)
* FIXED:
   * Fix for overlap in "Tools -> Adjust durations" - thx Christian
   * Fix bug in EBU STL ms to frames - thx Lucius Snow
   * Fix some shortcuts being written to text box - thx rebawest
   * Keep bookmarks after edit in source view - thx Ingo
   * Fix syntax coloring after replace - thx OmrSi